Fixed wrong page title on thread page

--- a/src/imageboard/templates/imageboard/thread_page.html
+++ b/src/imageboard/templates/imageboard/thread_page.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block page_title %}
-    {{ config.SITE_NAME }} :: /{{ board.hid }}/ {{ board.name }} :: {{ thread.hid }}
+    {{ config.SITE_NAME }} :: /{{ board.hid }}/ {{ board.name }} :: {{ thread.hid2hex }}
 {% endblock %}
 
 {% block header %}
