Use Trebuchet font by default

--- a/src/frontend/style.less
+++ b/src/frontend/style.less
@@ -54,26 +54,26 @@
 
 // Fonts
 // =====================================================================================================================
-@font-face {
-  font-family: 'Ubuntu';
-  font-weight: normal;
-  font-style: normal;
-  src: local('Ubuntu Regular'), local('Ubuntu-Regular'), url('fonts/Ubuntu-R.woff') format('woff');
-}
-
-@font-face {
-  font-family: 'Ubuntu';
-  font-style: italic;
-  font-weight: normal;
-  src: local('Ubuntu Italic'), local('Ubuntu-Italic'), url('fonts/Ubuntu-RI.woff') format('woff');
-}
-
-@font-face {
-  font-family: 'Ubuntu';
-  font-weight: bold;
-  font-style: normal;
-  src: local('Ubuntu Bold'), local('Ubuntu-Bold'), url('fonts/Ubuntu-B.woff') format('woff');
-}
+//@font-face {
+//  font-family: 'Ubuntu';
+//  font-weight: normal;
+//  font-style: normal;
+//  src: local('Ubuntu Regular'), local('Ubuntu-Regular'), url('fonts/Ubuntu-R.woff') format('woff');
+//}
+//
+//@font-face {
+//  font-family: 'Ubuntu';
+//  font-style: italic;
+//  font-weight: normal;
+//  src: local('Ubuntu Italic'), local('Ubuntu-Italic'), url('fonts/Ubuntu-RI.woff') format('woff');
+//}
+//
+//@font-face {
+//  font-family: 'Ubuntu';
+//  font-weight: bold;
+//  font-style: normal;
+//  src: local('Ubuntu Bold'), local('Ubuntu-Bold'), url('fonts/Ubuntu-B.woff') format('woff');
+//}
 
 @font-face {
   font-family: 'Material Icons';
@@ -100,7 +100,8 @@ html {
 
 
 body {
-  font: 14px/20px 'Ubuntu', 'Trebuchet MS', sans-serif;
+  //font: 14px/20px 'Ubuntu', 'Trebuchet MS', sans-serif;
+  font: 14px/20px 'Trebuchet MS', sans-serif;
   background: @page-bg  url("images/squared_metal.png") fixed;
   color: @main-color;
   position: relative;
