--- a/src/frontend/style.less
+++ b/src/frontend/style.less
@@ -1102,13 +1102,11 @@ a {
 }
 
 .ref-popup {
-  background: @main-bg;
-  color: @main-color;
-  border-radius: @block-border-radius;
-  .item-shadow;
-  width: 960px;
-  box-shadow: inset 0 0 0 1px @main-color, 2px 2px 10px rgba(0,0,0, 0.5);
+  width: @base-width;
   position: absolute;
+  box-shadow: 0 0 0 1px @main-color, 2px 2px 2px rgba(0,0,0,0.2);
+  border-radius: @block-border-radius;
+  //.item-shadow;
 }
 
 .textarea-wrapper {
