--- a/src/frontend/style.less
+++ b/src/frontend/style.less
@@ -1027,11 +1027,15 @@ a {
   margin-right: 10px;
   align-items: center;
 
+  &__image-wrapper {
+    position: relative;
+    margin-right: 10px;
+  }
+
   &__image {
     display: block;
     background: transparent;
     color: transparent;
-    margin-right: 10px;
     box-shadow: inset 0 0 0 1px @field-border;
   }
 
@@ -1041,14 +1045,18 @@ a {
   }
 
   &__button {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+
     display: inline-block;
     background: @button-bg;
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     padding: 0;
     border: 0;
-    line-height: 1px;
-    font-size: 24px;
+    //line-height: 1px;
+    font-size: 18px;
     cursor: pointer;
     border-radius: @input-border-radius;
     color: @button-color;
