--- a/src/imageboard/templates/400.html
+++ b/src/imageboard/templates/400.html
@@ -1,8 +1,12 @@
 {% extends 'error_base.html' %}
+{% load i18n %}
+
 
 {% block code %}400{% endblock %}
 
+
 {% block title %}Bad request{% endblock %}
+
 
 {% block message %}
 {% endblock %}
