--- a/src/imageboard/templates/404.html
+++ b/src/imageboard/templates/404.html
@@ -1,8 +1,12 @@
 {% extends 'error_base.html' %}
+{% load i18n %}
+
 
 {% block code %}404{% endblock %}
 
+
 {% block title %}Page not found{% endblock %}
+
 
 {% block message %}
     {{ exception }}
