--- a/src/imageboard/templates/500.html
+++ b/src/imageboard/templates/500.html
@@ -1,8 +1,12 @@
 {% extends 'error_base.html' %}
+{% load i18n %}
+
 
 {% block code %}500{% endblock %}
 
+
 {% block title %}Server error{% endblock %}
+
 
 {% block message %}
 {% endblock %}
