--- a/src/imageboard/templates/imageboard/board_page.html
+++ b/src/imageboard/templates/imageboard/board_page.html
@@ -1,13 +1,17 @@
 {% extends 'imageboard/base.html' %}
 {% load static %}
+{% load i18n %}
+
 
 {% block page_title %}
     {{ config.SITE_NAME }} :: /{{ board.hid }}/ {{ board.name }}
 {% endblock %}
 
+
 {% block header %}
     {% include 'imageboard/parts/header.html' %}
 {% endblock %}
+
 
 {% block content %}
     {% include 'imageboard/parts/board_header.html' %}
@@ -31,13 +35,16 @@
     <div class="popup-container js-popup-container"></div>
 {% endblock %}
 
+
 {% block footer %}
     {% include 'imageboard/parts/footer.html' with board_pages=threads %}
 {% endblock %}
 
+
 {% block page_style %}
     <style>{{ board.custom_style }}</style>
 {% endblock %}
+
 
 {% block metadata %}
     {% if cache_data %}
