--- a/src/imageboard/templates/imageboard/parts/board_header.html
+++ b/src/imageboard/templates/imageboard/parts/board_header.html
@@ -1,4 +1,6 @@
 {% load markdown %}
+{% load i18n %}
+
 
 <a class="board-header" href="{{ board.get_absolute_url }}" data-hid="{{ board.hid }}">
     <div class="board-header__title">
