--- a/src/imageboard/templates/imageboard/parts/js_templates.html
+++ b/src/imageboard/templates/imageboard/parts/js_templates.html
@@ -1,3 +1,6 @@
+{% load i18n %}
+
+
 <script type="text/template" id="placeholder-item-template">
     <div class="placeholder-item placeholder-item--<%= type %>" id="placeholder-<%= type %>-<%= id %>" data-id="<%= id %>">
         <div class="placeholder-item__deleted-label">
