--- a/src/imageboard/templates/imageboard/parts/lockdown.html
+++ b/src/imageboard/templates/imageboard/parts/lockdown.html
@@ -1,3 +1,6 @@
+{% load i18n %}
+
+
 <div class="lockdown lockdown--{{ type }}">
     {% if type == 'thread' %}
         Тред закрыт для новых постов.
