--- a/src/imageboard/templates/imageboard/parts/posting_form.html
+++ b/src/imageboard/templates/imageboard/parts/posting_form.html
@@ -1,4 +1,6 @@
 {% load markdown %}
+{% load i18n %}
+
 
 <form action="{% url 'posting_view' %}" method="post" class="posting-form js-posting-form" enctype="multipart/form-data">
     <div class="posting-form__inner">
