--- a/src/imageboard/templates/imageboard/parts/header.html
+++ b/src/imageboard/templates/imageboard/parts/header.html
@@ -1,3 +1,6 @@
+{% load i18n %}
+
+
 <header class="header">
     <div class="header__inner">
         <a class="header__logo" href="{% url 'start_page' %}">HEXCHAN.ORG</a>
