--- a/src/imageboard/templates/imageboard/posting_error_page.html
+++ b/src/imageboard/templates/imageboard/posting_error_page.html
@@ -1,8 +1,11 @@
 {% extends 'error_base.html' %}
+{% load i18n %}
+
 
 {% block header %}
     Ошибка
 {% endblock %}
+
 
 {% block message %}
     {{ exception }}
